# standax

./: README.md  setup.cfg
notebooks/: Appendix_Ginolin24a.ipynb  Appendix_Ginolin25a.ipynb  FigA2_G24b_sims_totalchi2.csv  FigA2_G25b_sims_loglikelihood.csv  FigA2_Ginolin24b.ipynb  FigA2_Ginolin25b.ipynb  Ginolin25ab_masterlist.csv  Standardisation_Ginolin24b.ipynb  Standardisation_Ginolin25b.ipynb  Standax_standardisation.ipynb  basic_standardisation_ztfsniadr2.ipynb  total_chi2.ipynb  totalchi2_and_standardisation.ipynb
standax/: __init__.py  covariance.py  fitter.py  hubble.py  priors.py  standardisation.py
